# sentiment-analysis-app

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  test_app.py
