[project]
name = "sentiment-analysis-app"
version = "0.1.0"
description = "Analyze sentiment of a given text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "cloudpickle>=3.1.1",
    "fastapi>=0.115.12",
    "joblib>=1.4.2",
    "torch>=2.7.0",
    "transformers==4.35.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "xenon>=0.9.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
